# PyPeruStats

./: .gitattributes  .gitignore  404.html  README.md  TODO.md  _update_data.py  index.html  infogob_tables.py  main.py  main.txt  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: deploy-docs.yml  publish-pypi.yml  publish-testpypi.yml
.runers/infogob/: main.md
MetadataSources/INEI/: enaho_actualizado.csv  endes_actualizado.csv  microdatos_recolectados.csv
MetadataSources/INEI/microdatos/: enapres_actualizado.csv
TODO/: index.html
archive/: consulta_anioinei.py
bcrp/: index.html
bcrp/cache/: index.html
bcrp/examples/: index.html
bcrp/fetcher/: index.html
bcrp/metadata/: index.html
bcrp/quickstart/: index.html
bcrp/series/: index.html
docs/: index.md
docs/bcrp/: cache.md  examples.md  fetcher.md  index.md  metadata.md  quickstart.md  series.md
docs/inei/: examples.md  fetcher.md  index.md  quickstart.md  structure.md  surveys.md
docs/mef/: buttons.md  config.md  examples.md  index.md  quickstart.md  scraper.md  steps.md  todo.md
docs/siaf/: index.md
inei/: index.html
inei/examples/: index.html
inei/fetcher/: index.html
inei/quickstart/: index.html
inei/structure/: index.html
inei/surveys/: index.html
mef/: index.html
mef/buttons/: index.html
mef/config/: index.html
mef/examples/: index.html
mef/quickstart/: index.html
mef/scraper/: index.html
mef/steps/: index.html
mef/todo/: index.html
notebooks/: 0_metadata.ipynb  1_fetcher_transform.ipynb  infogob.py
notebooks/MEF/: MEF_consulta_amigable.ipynb
notebooks/bcrp/: 0_metadata.ipynb  1_fetcher_transform.ipynb  main.py
notebooks/inei/: enaho.ipynb  enaho_split_data.ipynb  enapres.ipynb  endes.ipynb  tables.ipynb
perustats/: __init__.py  utils.py  version.py
perustats/BCRP/: __init__.py  cache.py  fetcher.py  metadata.py  models.py  utils.py
perustats/BCRP/archive/: constants.py  metadata.py  utils.py
perustats/BCRP/backup/: metadata.py  runner.py  utils.py
perustats/MEF/: __init__.py  constants.py  scraper.py  scrapper.py  step.py  utils.py
perustats/MEF/archive/: __init__.py  utils.py
perustats/MEF/constants/: buttons.py  config.py  reference.py  tables.py
perustats/ONPE/: readme.md  resultados.py  ubigeos.py
perustats/inei/: __init__.py  constants.py  downloader.py  fetcher.py  module_fetcher.py  organizer.py  utils.py
perustats/infogob/: 00_procesos_electorales_metadata.py  10_locations_ids.py  11_locations_refs.py  20_resultados.py  21_candidatos_by_eleccion.py  30_organizaciones_politicas.py  40_candidato_details.py  41_candidatos_historial.py  constants.py  utils.py
pyPeruStats/: __init__.py  utils.py
pyPeruStats/BCRP/: fetcher.py
pyPeruStats/MTC/: test.py
pyPeruStats/inei/: enaho.py  fetcher.py  old.py  test.py  utils.py
pyPeruStatsa/: __init__.py
pyPeruStatsa/MTC/: homologacion.py
pyPeruStatsa/inei/: utils.py
requests/MTC/: homologacion.json
search/: search_index.json
siaf/: index.html
(+736 files in other folders)
