[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perustats"
version = "0.2.22"
description = "Tools to download and process public datasets from Peru (INEI & BCRP)."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"



authors = [
  { name="Jhon K. Flores Rojas", email="fr.jhonk@gmail.com" }
]

license-files = ["LICENSE"]

dependencies = [
  "bs4",
  "geopandas>=1.0.1",
  "httpx",
  "ipykernel>=6.31.0",
  "joblib",
  "lxml",
  "pandas",
  "plotly>=6.7.0",
  "polars>=1.36.1",
  "pyarrow>=21.0.0",
  "requests",
  "rich",
  "streamlit>=1.50.0",
  "tqdm",
  "unidecode",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/TJhon/PyPeruStats"
Issues = "https://github.com/TJhon/PyPeruStats/issues"


[tool.setuptools.packages.find]
where = ["."]
include = ["perustats*"]

[tool.ruff]
exclude = ["*.ipynb", ".venv", "build", "data"]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=0.30.1",
    "python-dotenv>=1.2.1",
]
